--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-redux": "^7.1.2",
+    "link-module-alias": "^1.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
@@ -19,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "postinstall": "link-module-alias",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -43,5 +45,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "react-addons-test-utils": "^15.6.2"
+  },
+  "_moduleAliases": {
+    "types": "./src/types"
   }
 }
