--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "3.5.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "link-module-alias && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "postinstall": "link-module-alias",
